0.83.1
  - Tandy/PCjr 3-voice fixed to respond to I/O port 0xC0
    regardless of 8-bit or 16-bit I/O (fixes Prince of
    Persia).
  - Write-protecting a disk image in IMGMOUNT and BOOT
    commands now supported by putting a leading colon (:)
    before the image file name. Works with disk swapping;
    e.g. "BOOT :C:\DISK1.IMG C:\DISK2.IMG" only write-
    protects C:\DISK1.IMG but not C:\DISK2.IMG. The new
    config option "leading colon write protect image" can
    be used to disable or enable this behavior (Wengier)
  - Support for changing DOSBox-X internal time (Wengier)
  - Support for pipes (|), e.g. "DIR | MORE" should now
    work as expected; it is recommended to set the %TEMP%
    environment variable before using pipes (Wengier)
  - Improved -get & -set options for the CONFIG command,
    e.g. support for config options with spaces (Wengier)
  - Improved REN (or RENAME) command to support wildcards
    (* and ?) in the source and/or target files (Wengier) 
  - Implemented FOR command to run a specified command for
    each file in a set of files. Also added LFNFOR command
    to control whether to use long filenames in the FOR
    command as in MS-DOS 7+ (Wengier)
  - Implemented ATTRIB command to view and set attributes
    of files or directories (Wengier)
  - Added emulation of R (readonly) attribute bit for
    Linux and Unix systems through the user-writable
    file mode bits of the filesystem.
  - Fixed PC DOS 2000 crash during installation.
  - Fixed PC speaker emulation to allow higher PC speaker
    frequencies (10x the value of pcrate) to reduce
    hiss/noise/aliasing noise that occurs when games
    program ultrasonic frequencies into the counter to
    "silence" the speaker. "Titus the Fox Marrakech and
    Back" should no longer have audible hissing noises
    between beeps when the game is using the PC speaker.
  - Increased DOS device limit, to avoid E_Exit() crash
    if all LPT and COM devices are enabled along with